--- a/fpgatools/Makefile
+++ b/fpgatools/Makefile
@@ -14,7 +14,7 @@ PKG_SOURCE_VERSION:=$(PKG_REV)
 
 include $(INCLUDE_DIR)/package.mk
 
-define Package/fpgatools/Default
+define Package/fpgatools
 	SECTION:=utils
 	CATEGORY:=Utilities
 	TITLE:=fpgatools
@@ -25,41 +25,35 @@ define Package/fpgatools/description
 fpgatools is a toolchain to program field-programmable gate arrays (FPGAs)
 endef
 
-TARGET_LDFLAGS += -lusb -lftdi
+TARGET_LDFLAGS += -L$(STAGING_DIR)/usr/lib
 
 define Build/Compile
-	$(call Build/Compile/Default, fp2bit, bit2fp)
-	$(MAKE_VARS) $(MAKE) -C $(PKG_BUILD_DIR)/mini-jtag \
-		$(MAKE_FLAGS) \
-		DESTDIR="$(PKG_INSTALL_DIR)" \
-		all install
-endef
-
-define Package/fpgatools
-	$(call Package/fpgatools/Default)
-	TITLE+=(fpgatools)
+	$(call Build/Compile/fpgatools, fp2bit, bit2fp)
+	$(MAKE_VARS) $(MAKE) -C $(PKG_BUILD_DIR)/mini-jtag $(MAKE_FLAGS) \
+	DESTDIR="$(PKG_INSTALL_DIR)" \
+	all install
 endef
 
 define Package/fpgatools/install
-	$(INSTALL_DIR) $(1)/usr/bin
-	$(INSTALL_DIR) $(1)/usr/lib
 
-	$(INSTALL_BIN) $(PKG_INSTALL_DIR)/usr/local/bin/fp2bit $(1)/usr/bin
-	$(INSTALL_BIN) $(PKG_INSTALL_DIR)/usr/local/bin/bit2fp $(1)/usr/bin
-	$(INSTALL_DATA) \
-		$(PKG_INSTALL_DIR)/usr/local/lib/libfpga-* \
-		$(1)/usr/lib/
+	$(INSTALL_DIR)	$(1)/usr/bin
+	$(INSTALL_DIR)	$(1)/usr/lib
+
+	$(INSTALL_BIN)	$(PKG_INSTALL_DIR)/usr/local/bin/fp2bit		$(1)/usr/bin
+	$(INSTALL_BIN)	$(PKG_INSTALL_DIR)/usr/local/bin/bit2fp		$(1)/usr/bin
+	$(INSTALL_DATA) $(PKG_INSTALL_DIR)/usr/local/lib/libfpga-*	$(1)/usr/lib
+
 endef
 
 define Package/mini-jtag
-	$(call Package/fpgatools/Default)
-	DEPENDS:=+libusb-compat +libftdi
-	TITLE+=(mini-jtag)
+	TITLE+=mini-jtag
+	DEPENDS:=+libusb-compat +libftdi1
 endef
 
 define Package/mini-jtag/install
-	$(INSTALL_DIR) $(1)/usr/bin
-	$(INSTALL_BIN) $(PKG_INSTALL_DIR)/usr/local/bin/mini-jtag $(1)/usr/bin
+	$(CP)	$(STAGING_DIR)/usr/lib/libusb-0.1.so*		$(1)/usr/lib
+	$(INSTALL_DIR)	$(1)/usr/bin
+	$(INSTALL_BIN)	$(PKG_INSTALL_DIR)/usr/local/bin/mini-jtag	$(1)/usr/bin
 endef
 
 $(eval $(call BuildPackage,fpgatools))
